# solana-bootcamp-autumn

week-1/assignment/: README.md  assignment.ts  package-lock.json  package.json  tsconfig.json
week-1/code/: .gitignore  README.md  example.env  package-lock.json  package.json
week-1/code/lib/: helpers.ts  vars.ts
week-1/code/scripts/: 1.simpleTransaction.ts  get-keys.ts  (+1 more)
week-2/assignment/: README.md  createNFT.ts  tsconfig.json
week-2/code/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
week-3/assignment/: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
week-3/assignment/programs/todo-app/: Cargo.toml
week-3/assignment/programs/todo-app/src/: lib.rs
week-3/code/: .gitignore  Anchor.toml  package.json
week-3/test-ledger/: faucet-keypair.json
week-4/assignment/: Anchor.toml  README.md
week-4/code/: Anchor.toml  package.json
week-4/test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-BMXPNT4hmy7v3PhoXi8s4M9gkHdALf2vsynh4TCZsPyH.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
week-4/token-2022-staking/: Anchor.toml  REAME.md  package.json
week-5/: .cursorignore
week-5-new/tests/: amm.ts  create-pool.ts  deposit-liquidity.ts
week-5/anchor-basic-amm/: .rustfmt.toml  Anchor.toml  package.json
week-5/assignment/: Anchor.toml  README.md  package.json
week-5/code/: Anchor.toml  package.json
week-6/assignment/: .gitignore  README.md  package.json
week-6/code/: .dockerignore  .env  .env.example  .gitignore  .prettierrc  Dockerfile  README.md  package.json
(+127 files in other folders)
