[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "todo_app"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# ✅ Required for IDL generation
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"  # ⬆️ Upgraded from 0.29.0